<resources>
    <string name="app_name">MarkerDemo</string>
    <string name="title_activity_marker_demo">Marker Demo</string>
    <string name="action_settings">Toggle mode</string>
    <string name="location_label">Location:</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="none">None</string>
    <string name="map_info">Map info</string>
    <string name="map_type_title">Map type</string>
    <string name="zoomSummary">Preferred zoom level</string>
    <string name="startTitle">Start location</string>
    <string name="startSummary">Preferred start location</string>
    <string name="AD_title">Aerodrome Icons</string>
    <string name="navaids_title">Navigational Icons</string>
    <string name="AD_summary">Select if you prefer to have Aerodrome icons on the map</string>
    <string name="navaids_summary">Select if you prefer to have navigational icons on the map</string>
    <string name="preferences">Preferences</string>
    <string name="settings">Settings</string>
    <string name="resetDb">Reset DB</string>
    <string name="clearDb">Clear DB</string>
    <string name="seedDb">Load DB</string>
    <string name="resetDbSummary">Reset the entire Database</string>
    <string name="db_mode">Maintenance</string>
    <string name="trip_mode">Trip</string>
    <string name="label_mode">"Toggle mode"</string>
    <string name="short_name_text">Route Planning</string>
    <string name="global_text">Please enter the key performance metrics\nfor this trip</string>
    <string name="title_maintenance">Maintenance mode</string>
    <string name="title_trip">Select a route</string>
    <string name="title_activity_google_sheet">GoogleSheetActivity</string>
    <string name="nav_about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="ETO">ETO</string>
    <string name="RETO">RETO</string>
    <string name="done">Done</string>
    <string name="db_admin_guide">You are now in admin mode\n\n- Long press a plan to delete it\n- Click on a plan to inspect way points\n and optionally delete by long pressing.</string>
</resources>
