<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Database">
        <menu
            android:id="@+id/db"
            android:title="Database">


            <item
                android:id="@+id/db_export"
                android:title="Export"/>
            <item
                android:id="@+id/db_import"
                android:title="Import"/>
            <item
                android:id="@+id/db_navaids"
                android:title="Update"/>
            <item
                android:id="@+id/db_reset"
                android:title="Reset DB"/>
        </menu>
    </item>
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/nav_about" />
        </menu>
    </item>
</menu>