<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="startLocation"
        android:title="@string/startTitle"
        android:defaultValue="Roskilde airport, Denmark"
        android:summary="@string/startSummary" />
    <EditTextPreference
        android:key="zoomLevel"
        android:title="zoomLevel"
        android:defaultValue="10.0"
        android:summary="@string/zoomSummary" />
     <ListPreference
         android:key="mapType"
         android:title="@string/map_type_title"
         android:summary="@string/map_type_title"
         android:defaultValue="1"
         android:entries="@array/listArrayMapType"
         android:entryValues="@array/listValuesMapType" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="show_obstacles"
        android:summary="Select to show obstacles on the map"
        android:title="Obstacles"/>

    <PreferenceScreen
        android:title="@string/navaids_title"
        android:key="pref_key_navaids_settings"
        >
        <CheckBoxPreference
            android:key="show_Locator"
            android:title="Locator"
            android:summary="Select to show Locators"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="show_VOR"
            android:title="VOR"
            android:summary="Select to show VORs"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="show_DME"
            android:title="DME"
            android:summary="Select to show DMEs"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="show_VORDME"
            android:title="VOR/DME"
            android:summary="Select to show VOR/DMEs"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="show_NDB"
            android:title="NDB"
            android:summary="Select to show NDBs"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="show_TACAN"
            android:title="TACAN"
            android:summary="Select to show TACANs"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="show_VORTAC"
            android:title="VORTAC"
            android:summary="Select to show VORTACs"
            android:defaultValue="true"/>
    </PreferenceScreen>

    <PreferenceScreen
        android:key="pref_key_AD_settings"
        android:title="Aerodromes">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_public_ad"
            android:summary="Select to show public airports"
            android:title="Public"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_private_ad"
            android:summary="Select to show private airfields"
            android:title="Private"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_recreational_ad"
            android:summary="Select to show recreational airfields"
            android:title="Recreational"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_reporting"
            android:summary="Select to show reporting points on the map"
            android:title="Reporting Points"/>
    </PreferenceScreen>


    <PreferenceScreen
        android:key="pref_key_Area_settings"
        android:title="Air Space">
        <EditTextPreference
            android:key="show_TMA_MAXALT"
            android:title="Max Altitude"
            android:defaultValue="5000.0"
            android:summary="Do not show airspace starting above this altitude" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_CTR"
            android:summary="Select to show CTRs on the map"
            android:title="CTR"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_TMA"
            android:summary="Select to show TMAs on the map"
            android:title="TMA" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_TIZ"
            android:summary="Select to show TIZs on the map"
            android:title="TIZ" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_TIA"
            android:summary="Select to show TIAs on the map"
            android:title="TIA" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_LTA"
            android:summary="Select to show LTAs on the map"
            android:title="LTA" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_P"
            android:summary="Select to show prohibited areas"
            android:title="Prohibited" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_R"
            android:summary="Select to show restricted areas"
            android:title="Restricted" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_D"
            android:summary="Select to show danger areas"
            android:title="Danger" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_ENV"
            android:summary="Select to show sensitive areas"
            android:title="Sensitive" />
    </PreferenceScreen>

</PreferenceScreen>